# ProjectToText

./: .gitignore  .pttignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  tauri.conf.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
capabilities/: default.json
docs/: ARCHITECTURE.md  EXPERT_REVIEW.md
docs/screenshots/: README.md
icons/: icon.icns
src/: cli.rs  lib.rs  main.rs
src/core/: mod.rs  output.rs  preview.rs  walker.rs
ui/: index.html  package-lock.json  package.json  playwright.config.ts
ui/e2e/: smoke.spec.ts
ui/src/: App.tsx  FileViewer.tsx  browserFs.ts  index.css  main.tsx  syntax.ts  tauriEnv.ts
